# Oclis

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  changelog.md  flake.nix  license.txt  makefile  oclis-contract.ncl  oclis.json  oclis.ncl  package.yaml  processing-pipeline.dot  readme.md  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
examples/: simple.ncl
haskell/: .gitignore  makefile  package.yaml  readme.md  stack.yaml
haskell/app/: Main.hs
haskell/source/: Oclis.hs
haskell/source/Oclis/: App.hs  Option.hs
haskell/tests/: Spec.hs
purescript/: .gitignore  makefile  package-lock.json  package.json  spago.yaml
purescript/src/Oclis/: Executor.purs  Parser.purs  SpecEmbed.purs  Tokenizer.purs  Types.purs  readme.md
purescript/test/: Executor.purs  Main.purs  Parser.purs  Tokenizer.purs
rust/src/oclis/: executor.rs  mod.rs  parser.rs  readme.md  tokenizer.rs  types.rs
source/: Lib.hs
src/: main.rs  template.ncl
tests/: Spec.hs
